# MQUsageViewer

./: .gitignore  Cargo.toml  Dockerfile  README.md  SEARCHABLE_DROPDOWN_README.md  run_redis.sh
src/: main.rs
src/application/: auth_service.rs  mod.rs  mq_log_usage_service.rs
src/domain/: mod.rs  model.rs  mq_log_usage.rs
src/infrastructure/: app_state.rs  mod.rs
src/infrastructure/middleware/: auth_middleware.rs
src/interface/: dto.rs
src/interface/api/: login_handler.rs  mod.rs  mq_log_handler.rs
statics/: index.html  login.html  login_entra_id.html  test-dropdown.html
statics/css/: styles.css
statics/js/: api.js  auth.js  chart.js  scripts.js  searchable-select.js  table.js  utils.js
