[package]
name = "mqusageviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
dotenv = "0.15"
actix-web = "4"
serde = { version = "1" , features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.34" , features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3"
plotters-svg = "0.3"