[package]
name = "mqusageviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
dotenv = "0.15"
actix-web = "4"
actix-files = "0.6"

actix-service = "2"
jsonwebtoken = "9.3"
serde = { version = "1" , features = ["derive"] }


rusqlite = { version = "0.34" , features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }

futures-util = "0.3.31"


