[package]
name = "mqusageviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
dotenv = "0.15"
actix-web = "4"
actix-files = "0.6"

actix-service = "2"
jsonwebtoken = "9.3"
serde = { version = "1" , features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.34" , features = ["chrono","bundled"] }
chrono = { version = "0.4", features = ["serde"] }

futures-util = "0.3.31"

redis = "0.32"

[profile.release]
opt-level = "z"              # ลดขนาด binary (แทน "3" แบบ default)
lto = true                   # เปิด Link Time Optimization
codegen-units = 1           # ลด parallel unit เพื่อ optimize binary size
panic = "abort"             # ลดขนาด code ที่ใช้สำหรับ unwinding panic
strip = "symbols"           # ตัด debug symbols (ถ้าใช้ nightly Rust ไม่ต้องใช้ strip ใน Dockerfile)
